--- a/数据库.md
+++ b/数据库.md
@@ -178,3 +178,264 @@ ODBC：Open DataBase Connection
 ![image-20250113153742928](./pic/image-20250113153742928.png)
 
 ![image-20250113154125449](./pic/image-20250113154125449.png)
+
+# 关系模型
+
+## 关系模型的基本概念
+
+关系模型的三要素
+
+* 基本结构 relation/table（关系/表）
+* 基本操作 relation operator
+* 完整性约束
+
+关系运算：关系代数和关系演算；关系演算：元组演算和域演算
+
+**关系运算的操作对象及结果都是集合**。
+
+### 关系
+
+列的取值范围叫**域（Domain）**：一组值的集合，这组值具有相同的数据类型。如男人集合、女人集合、儿童集合。
+
+集合中元素的个数称为域的**基数(Cardinality)**
+
+表中的一行叫**元组**（$d_1,d_2,...,d_n$），所有可能组合成的元组叫**笛卡尔积**。笛卡尔积中有多少元素称为一个**n-元组（n-tuple）**
+
+![image-20250115114442338](./pic/image-20250115114442338.png)
+
+元组中的每一个值$d_i$叫作一个**分量（component）**。
+
+元组是从每一个域任取一个值所形成的一种组合，笛卡尔积是所有这种可能组合的集合。**笛卡尔积是由n个域所形成的所有可能的n-元组的集合**。
+
+若$D_i$的基数为$m_i$，则笛卡尔积的**基数**，即元组个数为$m_1×m_2×...×m_n$
+
+由于笛卡尔积中的所有元素并不是都有意义的，由此引出关系的概念。关系是一组域（$D_1,D_2,...,D_n$）的**笛卡尔积的子集**，关系是有意义的元组的集合。
+
+由于关系的不同列可能来自同一个域，为做区分故关系的每一列叫**属性名**，域名是针对域的名字，而属性名是关系中每一列的名字，**二者不同**。
+
+![image-20250115115246847](./pic/image-20250115115246847.png)
+
+**关系模式（Schema）或表标题（head）**
+
+![image-20250115115732135](./pic/image-20250115115732135.png)
+
+![image-20250115115903308](./pic/image-20250115115903308.png)
+
+**关系模式与关系**：关系模式是关系的结构，关系是关系模式在某一时刻的数据。
+
+![image-20250115120004596](./pic/image-20250115120004596.png)
+
+### 关系的特性
+
+列是同质的：每一列中的分量来自同一个域，是同一类型的数据。
+
+**不同的列可以来自同一个域**，其中的每一个列为一个属性，不同的属性要给予不同的属性名。
+
+![image-20250115120339741](./pic/image-20250115120339741.png)
+
+关系当中行列位置可以互换。
+
+属性不可再分特性：**关系第一范式**。
+
+![image-20250115120652449](./pic/image-20250115120652449.png)
+
+**候选码（Candidate Key）/ 候选键**
+
+关系中的一个属性组，其值能唯一标识一个元组，若从该属性组中去掉任何一个属性，它就不具有这一性质了。
+
+![image-20250115121005488](./pic/image-20250115121005488.png)
+
+关系中可以有很多组候选码。
+
+![image-20250115121059100](./pic/image-20250115121059100.png)
+
+**主码（Primary Key）/主键**：当有多个候选码时，可以选定一个主码。**表中的主关键字可以有多个列**。
+
+**DBMS以主码为主要线索管理关系中的各个元组。**
+
+![image-20250115121233164](./pic/image-20250115121233164.png)
+
+**主属性与非主属性**：包含在任何一个候选码中的属性称为主属性，而其他属性被称作非主属性。
+
+![image-20250115121419626](./pic/image-20250115121419626.png)
+
+**外码（Foreign Key）/外键**：关系R中的一个属性组，它不是R的候选码，但**它与另一个关系S的候选码**相对应，称这个属性组为R的外码或外键。
+
+外键可以为R的主属性或非主属性。
+
+![image-20250115121540935](./pic/image-20250115121540935.png)
+
+总结
+
+![image-20250115122827745](./pic/image-20250115122827745.png)
+
+### 关系模型的完整性
+
+**实体完整性：**关系的主码中的属性值不能为空值，空值不能参与算数比较与逻辑运算。
+
+![image-20250115123204416](./pic/image-20250115123204416.png)
+
+**参照完整性：**外码必须等于一个对应表的表项值或者为空值，不能凭空捏造。
+
+![image-20250115123409497](./pic/image-20250115123409497.png)
+
+**用户自定义完整性：**用户针对具体的应用环境定义的完整性约束条件
+
+![image-20250115123527672](./pic/image-20250115123527672.png)
+
+DBMS对关系完整性的支持：**实体完整性和参照完整性由DBMS系统自动支持**
+
+![image-20250115123649638](./pic/image-20250115123649638.png)
+
+## 关系代数
+
+关系代数运算的特点：关系代数操作以一个或多个关系为输入，结果是一个新的关系。
+
+* 集合操作
+* 纯关系操作
+
+![image-20250115125618529](./pic/image-20250115125618529.png)
+
+### 关系代数的基本操作
+
+**并相容性**
+
+![image-20250115130104491](./pic/image-20250115130104491.png)
+
+**并**
+
+![image-20250115130244625](./pic/image-20250115130244625.png)
+
+![image-20250115130453703](./pic/image-20250115130453703.png)
+
+![image-20250115130516440](./pic/image-20250115130516440.png)
+
+**差**
+
+![image-20250115130644651](./pic/image-20250115130644651.png)
+
+![image-20250115130747130](./pic/image-20250115130747130.png)
+
+**广义笛卡尔积**
+
+![image-20250115130936545](./pic/image-20250115130936545.png)
+
+![image-20250115131240177](./pic/image-20250115131240177.png)
+
+![image-20250115131320816](./pic/image-20250115131320816.png)
+
+**选择**
+
+![image-20250115131735051](./pic/image-20250115131735051.png)
+
+![image-20250115131905250](./pic/image-20250115131905250.png)
+
+![image-20250115132101683](./pic/image-20250115132101683.png)
+
+ 注意操作顺序。
+
+![image-20250115132221417](./pic/image-20250115132221417.png)
+
+**投影**
+
+选择是行操作，投影是列操作。
+
+![image-20250115132346496](./pic/image-20250115132346496.png)
+
+如果投影后有重复元组，则应去掉
+
+![image-20250115132457697](./pic/image-20250115132457697.png)
+
+先选择，后投影
+
+![image-20250115132731709](./pic/image-20250115132731709.png)
+
+### 关系代数的扩展操作
+
+**交**
+
+![image-20250115132929148](./pic/image-20250115132929148.png)
+
+**θ-连接**
+
+投影与选择只是对单个表操作，而θ则是涉及到多个表的操作
+
+![image-20250115133245557](./pic/image-20250115133245557.png)
+
+![image-20250115133507239](./pic/image-20250115133507239.png)
+
+![image-20250115133749253](./pic/image-20250115133749253.png)
+
+θ支持表自身连接操作，表自身连接操作要有**更名操作ρ**。
+
+![image-20250115134208783](./pic/image-20250115134208783.png)
+
+**等值连接**
+
+![image-20250115134334368](./pic/image-20250115134334368.png)
+
+![image-20250115134353974](./pic/image-20250115134353974.png)
+
+**自然连接**
+
+注意，θ连接不需要将公共属性合并，而自然连接时需要。
+
+![image-20250115134623628](./pic/image-20250115134623628.png)
+
+![image-20250115134758823](./pic/image-20250115134758823.png)
+
+### 组合与应用训练
+
+注意选择与自然连接操作下的笛卡尔积写法
+
+![image-20250115135653277](./pic/image-20250115135653277.png)
+
+注意同一个表中的与运算的写法。 
+
+![image-20250115140155874](./pic/image-20250115140155874.png)
+
+![image-20250115140638593](./pic/image-20250115140638593.png)
+
+![image-20250115140646983](./pic/image-20250115140646983.png)
+
+上述例子中，第一个式子不对，因为返回的是几乎所有同学，当仅学习002一门课的同学可以被这个式子筛掉。
+
+第二个式子逻辑正确，但不满足减法的并相容性。
+
+标准答案：
+
+![image-20250115140918691](./pic/image-20250115140918691.png)
+
+![image-20250115141017345](./pic/image-20250115141017345.png)
+
+### 复杂扩展操作
+
+**除**
+
+![image-20250115144544396](./pic/image-20250115144544396.png)
+
+![image-20250115144758674](./pic/image-20250115144758674.png)
+
+![image-20250115145134299](./pic/image-20250115145134299.png)
+
+除法运算一般用于“全部”、“所有”字样的题目。
+
+![image-20250115145657957](./pic/image-20250115145657957.png)
+
+![image-20250115150019235](./pic/image-20250115150019235.png)
+
+**外连接**
+
+![image-20250115150146166](./pic/image-20250115150146166.png)
+
+ ![image-20250115150705679](./pic/image-20250115150705679.png)
+
+![image-20250115150802178](./pic/image-20250115150802178.png)
+
+![image-20250115150853921](./pic/image-20250115150853921.png)
+
+![image-20250115151020904](./pic/image-20250115151020904.png)
+
+![image-20250115151051222](./pic/image-20250115151051222.png)
+
+![image-20250115151118626](./pic/image-20250115151118626.png)
