--- a/数据库.md
+++ b/数据库.md
@@ -688,6 +688,10 @@ DCL语句主要用于数据定义。
 
 ### (not) in 子查询
 
+in子查询返回一个集合
+
+![image-20250120124255002](./pic/image-20250120124255002.png)
+
 ![image-20250118162100694](./pic/image-20250118162100694.png)
 
 ![image-20250118162322088](./pic/image-20250118162322088.png)
@@ -700,7 +704,7 @@ DCL语句主要用于数据定义。
 
 ![image-20250118162611870](./pic/image-20250118162611870.png)
 
-**谓词子查询**
+### some all 谓词子查询
 
 ![image-20250118162939263](./pic/image-20250118162939263.png)
 
@@ -710,8 +714,120 @@ DCL语句主要用于数据定义。
 
 ![image-20250118163530875](./pic/image-20250118163530875.png)
 
+上图中第三个答案是相关子查询
+
 **等价变换**
 
 ![image-20250118163743118](./pic/image-20250118163743118.png)
 
 ![image-20250118163850745](./pic/image-20250118163850745.png)
+
+ ### (NOT) EXIST 子查询
+
+![image-20250120131939945](./pic/image-20250120131939945.png)
+
+not exist: 
+
+![image-20250120132625221](./pic/image-20250120132625221.png)
+
+![image-20250120133528948](./pic/image-20250120133528948.png)
+
+![image-20250120133651342](./pic/image-20250120133651342.png)
+
+### 利用SQL语言进行结果计算与聚集计算
+
+![image-20250120133845037](./pic/image-20250120133845037.png)
+
+![image-20250120134617605](./pic/image-20250120134617605.png)
+
+![image-20250120134706558](./pic/image-20250120134706558.png)
+
+![image-20250120134817167](./pic/image-20250120134817167.png)
+
+### 利用SQL语言进行分组查询与分组过滤
+
+Group by
+
+![image-20250120135121669](./pic/image-20250120135121669.png)
+
+聚集函数是不允许用于Where字句的。
+
+分组过滤：Having 
+
+![image-20250120135530469](./pic/image-20250120135530469.png)
+
+![image-20250120135755454](./pic/image-20250120135755454.png)
+
+**HAVING字句与WHERE字句表达条件的区别**
+
+![image-20250120135838459](./pic/image-20250120135838459.png)
+
+![image-20250120140230708](./pic/image-20250120140230708.png)
+
+上图中，Where后边跟的是查询有两门以上不及格课程的同学。最后的Group by是 Avg(Score)用的
+
+### 用SQL实现关系代数操作
+
+并 UNION，交 NTERSECT，差 EXCEPT
+
+![image-20250120140911340](./pic/image-20250120140911340.png)
+
+![image-20250120141141306](./pic/image-20250120141141306.png)
+
+![image-20250120141229451](./pic/image-20250120141229451.png)
+
+![image-20250120141314007](./pic/image-20250120141314007.png)
+
+![image-20250120145959364](./pic/image-20250120145959364.png)
+
+![image-20250120150228035](./pic/image-20250120150228035.png)
+
+空值null的处理
+
+![image-20250120150618275](./pic/image-20250120150618275.png)
+
+除了**is (not) null** 之外，空值不满足任何查找条件。
+
+如果null参与聚集运算，则除**count(*)**之外其它聚集函数都忽略null。
+
+![image-20250120150904328](./pic/image-20250120150904328.png)
+
+**内连接与外连接**
+
+![image-20250120151031371](./pic/image-20250120151031371.png)
+
+![image-20250120151543041](./pic/image-20250120151543041.png)
+
+### SQL 视图
+
+![image-20250120151855144](./pic/image-20250120151855144.png)
+
+![image-20250120152101712](./pic/image-20250120152101712.png)
+
+![image-20250120152354222](./pic/image-20250120152354222.png)
+
+![image-20250120152500111](./pic/image-20250120152500111.png)
+
+![image-20250120152818830](./pic/image-20250120152818830-1737358099388-1.png)
+
+上图中，注意视图定义中带有聚集函数则视图不可随着表的变化而自动更新。
+
+![image-20250120153052904](./image-20250120153052904.png)
+
+视图中包含了单个基本表的主键是视图可以更新的必要条件。
+
+![image-20250120153158690](./pic/image-20250120153158690.png)
+
+![image-20250120153215968](./pic/image-20250120153215968.png)
+
+![image-20250120162439054](./pic/image-20250120162439054.png)
+
+这道题选A。要是返回10个不及格同学的记录应该这么写：
+
+```sql
+SELECT * FROM student
+WHERE S# IN (
+    SELECT S# FROM SC WHERE score < 60
+);
+```
+
