--- a/数据库.md
+++ b/数据库.md
@@ -831,3 +831,110 @@ WHERE S# IN (
 );
 ```
 
+## SQL 语言与数据库完整性和安全性
+
+### 数据库完整性
+
+分为广义完整性和狭义完整性（专指**语义完整性**）。
+
+关系模型中有完整性要求：实体完整性、参照完整性、**用户自定义完整性（语义完整性）**
+
+完整性约束条件的一般形式：
+
+**Integrity Constraint ::= (O, P, A, R)**
+
+![image-20250120184130224](./pic/image-20250120184130224.png)
+
+按约束对象分类：
+
+![image-20250120184247453](./pic/image-20250120184247453.png)
+
+按约束来源分类
+
+![image-20250120184338460](./pic/image-20250120184338460.png)
+
+按约束状态分类
+
+![image-20250120184920251](./pic/image-20250120184920251.png)
+
+![image-20250120185052558](./pic/image-20250120185052558.png)
+
+#### 列约束
+
+![image-20250120190028970](./pic/image-20250120190028970.png)
+
+这个例子中，ctssex是检查的名字，下面检查的Sage的约束条件就没有名字。references是外键，on delete cascade 是 级联删除，当被引用表的D#对应行被删除，这个表中所有相同D#行被删除
+
+![image-20250120190421210](./pic/image-20250120190421210.png)
+
+#### 表约束
+
+![image-20250120190558538](./pic/image-20250120190558538.png)
+
+注意涉及到两列的时候要用表约束（放在列约束最后边）。
+
+![image-20250120190723963](./pic/image-20250120190723963.png)
+
+级联删除的表约束放在最后边
+
+![image-20250120195543461](./pic/image-20250120195543461.png)
+
+![image-20250120195742165](./pic/image-20250120195742165.png)
+
+#### ASSERTION 断言
+
+![image-20250120202017584](./pic/image-20250120202017584.png)
+
+![image-20250120202439885](./pic/image-20250120202439885.png)
+
+### 利用SQL实现数据库的动态完整性
+
+**Trigger 触发器**
+
+![image-20250120203532951](./pic/image-20250120203532951.png)
+
+![image-20250120204323894](./pic/image-20250120204323894.png)
+
+![image-20250120204551088](./pic/image-20250120204551088.png)
+
+这张图中，x是新数据，y是旧数据
+
+![image-20250120204847664](./pic/image-20250120204847664.png)
+
+这张图中，newi是新加行，where后面是找出对应的学生行
+
+![image-20250120205411440](./pic/image-20250120205411440.png)
+
+### 数据库的安全性
+
+![image-20250120205513591](./pic/image-20250120205513591.png)
+
+DBMS的安全机制
+
+![image-20250120205620358](./pic/image-20250120205620358.png)
+
+#### 数据库自主安全性机制
+
+![image-20250120213251629](./pic/image-20250120213251629.png)
+
+数据库自主安全性访问规则
+
+![image-20250120213401602](./pic/image-20250120213401602.png)
+
+![image-20250120215428353](./pic/image-20250120215428353.png)
+
+SQL语言的用户与权利
+
+![image-20250120215625304](./pic/image-20250120215625304.png)
+
+**授权命令**：grant 权限 on 表 to 某人
+
+![image-20250120215814860](./pic/image-20250120215814860.png)
+
+**收回授权**：
+
+![image-20250120220242028](./pic/image-20250120220242028.png)
+
+![image-20250120223356685](./pic/image-20250120223356685.png)
+
+Create Table 没有定义安全性约束的功能
