--- a/数据库.md
+++ b/数据库.md
@@ -938,3 +938,244 @@ SQL语言的用户与权利
 ![image-20250120223356685](./pic/image-20250120223356685.png)
 
 Create Table 没有定义安全性约束的功能
+
+# 嵌入式SQL
+
+## 嵌入式SQL语言的基本技巧
+
+![image-20250121120837448](./pic/image-20250121120837448.png)
+
+![image-20250121121045832](./pic/image-20250121121045832.png)
+
+### 变量声明与数据库连接
+
+![image-20250121121229969](./pic/image-20250121121229969.png)
+
+![image-20250121121440948](./pic/image-20250121121440948.png)
+
+![image-20250121121702705](./pic/image-20250121121702705.png)
+
+事务：要么全都执行，要么全都不执行
+
+![image-20250121121916539](./pic/image-20250121121916539.png)
+
+![image-20250121122024324](./pic/image-20250121122024324.png)
+
+![image-20250121122231255](./pic/image-20250121122231255.png)
+
+![image-20250121122255534](./pic/image-20250121122255534.png)
+
+### 数据集与游标
+
+高级语言如何读取单行与多行数据
+
+检索单行结果：
+
+![image-20250121122508638](./pic/image-20250121122508638.png)
+
+检索多行结果：**游标Cursor**
+
+![image-20250121122527353](./pic/image-20250121122527353.png)
+
+![image-20250121122659276](./pic/image-20250121122659276.png)
+
+![image-20250121122843181](./pic/image-20250121122843181.png)
+
+![image-20250121122949391](./pic/image-20250121122949391.png)
+
+### 可滚动游标及数据库的增删改
+
+标准游标一条记录只能访问一次，再次访问记录只能关闭游标后重新打开。
+
+![image-20250121123104491](./pic/image-20250121123104491.png)
+
+**ODBC**
+
+![image-20250121123150867](./pic/image-20250121123150867.png)
+
+![image-20250121123349871](./pic/image-20250121123349871.png)
+
+**删除**
+
+![image-20250121123444345](./pic/image-20250121123444345.png)
+
+**更新**
+
+![image-20250121123527344](./pic/image-20250121123527344.png)
+
+### 状态捕获及错误处理机制
+
+![image-20250121124052533](./pic/image-20250121124052533.png)
+
+![image-20250121124112263](./pic/image-20250121124112263.png)
+
+**状态捕获语句Whenever**
+
+![image-20250121125625358](./pic/image-20250121125625358.png)
+
+![image-20250121124356502](./pic/image-20250121124356502.png)
+
+![image-20250121124434137](./pic/image-20250121124434137.png)
+
+![image-20250121130235516](./pic/image-20250121130235516.png)
+
+![image-20250121124636893](./pic/image-20250121124636893.png)
+
+![image-20250121124733321](./pic/image-20250121124733321.png)
+
+![image-20250121131150479](./pic/image-20250121131150479.png)
+
+B中specName只有两个字符宽度，而给了三个字符
+
+![image-20250121131159473](./pic/image-20250121131159473-1737436320070-1.png)
+
+4执行错误后跳转至3，然后再跳转至7
+
+![image-20250121131208507](./pic/image-20250121131208507.png)
+
+状态捕获语句按照**程序行的次序（非程序执行次序）**作用到同条件下的线下一条状态捕获语句出现时为止。
+
+![image-20250121131216346](./pic/image-20250121131216346.png)
+
+一致性！
+
+![image-20250121131222562](./pic/image-20250121131222562.png)
+
+for update既能通过游标更新表数据，也能删除表数据。
+
+## 动态SQL
+
+![image-20250121131726752](./pic/image-20250121131726752.png)
+
+![image-20250121132216630](./pic/image-20250121132216630.png)
+
+![image-20250121133855593](./pic/image-20250121133855593.png)
+
+![image-20250121134602682](./pic/image-20250121134602682.png)
+
+### 动态SQL语句的执行方式
+
+![image-20250121134810868](./pic/image-20250121134810868.png)
+
+![image-20250121134956200](./pic/image-20250121134956200.png)
+
+![image-20250121135508278](./pic/image-20250121135508278.png)
+
+### 数据字典与SQLDA
+
+数据字典是系统中的一些表或视图的集合。数据字典存储了数据库中各类对象的定义信息。
+
+![image-20250121140012211](./pic/image-20250121140012211.png)
+
+![image-20250121140119985](./pic/image-20250121140119985.png)
+
+![image-20250121140254499](./pic/image-20250121140254499.png)
+
+![image-20250121140352185](./pic/image-20250121140352185.png)
+
+![image-20250121140500078](./pic/image-20250121140500078.png)
+
+![image-20250121140728025](./pic/image-20250121140728025.png)
+
+### ODBC
+
+Open DataBase Connection，是一种标准，不同语言的应用程序与不同数据库服务器之间通讯的标准。
+
+![image-20250121140915345](./pic/image-20250121140915345.png)
+
+![image-20250121141014643](./pic/image-20250121141014643.png)
+
+应用程序调用ODBC API，ODBC API 会调用具体DBMS Driver库函数，DBMS Driver 库函数会与数据库服务器通讯，执行相应的请求动作并返回检索结果。
+
+![image-20250121143744135](./pic/image-20250121143744135.png)
+
+![image-20250121141440348](./pic/image-20250121141440348.png)
+
+![image-20250121141537238](./pic/image-20250121141537238.png)
+
+![image-20250121141606549](./pic/image-20250121141606549.png)
+
+### JDBC
+
+Java DataBase Connection 是一组JAVA版ODBC。
+
+![image-20250121141644214](./pic/image-20250121141644214.png)
+
+![image-20250121141740796](./pic/image-20250121141740796.png)
+
+![image-20250121141918436](./pic/image-20250121141918436.png)
+
+![image-20250121142003774](./pic/image-20250121142003774.png)
+
+![image-20250121142046809](./pic/image-20250121142046809.png)
+
+### 嵌入式语言-ODBC-JDBC比较
+
+嵌入式SQL执行：
+
+![image-20250121142330308](./pic/image-20250121142330308-1737440610525-3.png)
+
+ODBC执行：
+
+![image-20250121142410585](./pic/image-20250121142410585.png)
+
+JDBC执行：
+
+![image-20250121142558805](./pic/image-20250121142558805.png)
+
+![image-20250121142814326](./pic/image-20250121142814326.png)
+
+![image-20250121144407561](./pic/image-20250121144407561.png)
+
+![image-20250121144452432](./pic/image-20250121144452432.png)
+
+# 数据建模
+
+## 数据建模的思想与方法
+
+![image-20250121153701822](./pic/image-20250121153701822.png)
+
+![image-20250121154715897](./pic/image-20250121154715897-1737445636502-5.png)
+
+### E-R模型-数据建模之基本思想
+
+![image-20250121154853962](./pic/image-20250121154853962.png)
+
+实体：客观存在并可区分的事务
+
+实例：实体的型
+
+![image-20250121155004858](./pic/image-20250121155004858.png)
+
+实体由**属性**刻画。
+
+![image-20250121155333116](./pic/image-20250121155333116.png)
+
+![image-20250121155520059](./pic/image-20250121155520059.png)
+
+![image-20250121155622354](./pic/image-20250121155622354.png)
+
+参与发生联系的实体的数目，称为联系的**度**或**元**。
+
+![image-20250121163925896](./pic/image-20250121163925896.png)
+
+实体是稳定的，但联系是多样化的。
+
+![image-20250121164137078](./pic/image-20250121164137078.png)
+
+一元联系：参与联系的实例来自于同一个实体
+
+ **角色**：实体在联系中的作用称为实体的角色
+
+![image-20250121164343625](./pic/image-20250121164343625.png)
+
+![image-20250121164521632](./pic/image-20250121164521632.png)
+
+联系的**基数**：实体实例之间的联系的数量
+
+![image-20250121164834299](./pic/image-20250121164834299.png)
+
+注意完全参与联系和部分参与联系
+
+![image-20250121165057330](./pic/image-20250121165057330.png)
+
