--- a/数据库.md
+++ b/数据库.md
@@ -1133,6 +1133,8 @@ JDBC执行：
 
 ## 数据建模的思想与方法
 
+![image-20250122133934271](./pic/image-20250122133934271.png)
+
 ![image-20250121153701822](./pic/image-20250121153701822.png)
 
 ![image-20250121154715897](./pic/image-20250121154715897-1737445636502-5.png)
@@ -1178,4 +1180,234 @@ JDBC执行：
 注意完全参与联系和部分参与联系
 
 ![image-20250121165057330](./pic/image-20250121165057330.png)
+
+![image-20250122124811891](./pic/image-20250122124811891.png)
+
+### chen方法
+
+chen方法是E-R模型的一种表达方法
+
+![image-20250122125102101](./pic/image-20250122125102101.png)
+
+![image-20250122125226122](./pic/image-20250122125226122.png)
+
+![image-20250122125310267](./pic/image-20250122125310267.png)
+
+![image-20250122125616462](./pic/image-20250122125616462.png)
+
+![image-20250122125729568](./pic/image-20250122125729568.png)
+
+![image-20250122130046744](./pic/image-20250122130046744.png)
+
+![image-20250122130150536](./pic/image-20250122130150536.png)
+
+### E-R模型-建模案例讲解
+
+![image-20250122130739146](./pic/image-20250122130739146.png)
+
+### Crow's Foot 方法
+
+E-R模型的另一种表示方法
+
+![image-20250122130919416](./pic/image-20250122130919416.png)
+
+![image-20250122131115360](./pic/image-20250122131115360.png)
+
+![image-20250122131349045](./pic/image-20250122131349045.png)
+
+![image-20250122131558014](./pic/image-20250122131558014.png)
+
+![image-20250122131734636](./pic/image-20250122131734636.png)
+
+![image-20250122131854353](./pic/image-20250122131854353.png)
+
+![image-20250122132128483](./pic/image-20250122132128483.png)
+
+![image-20250122134722380](./pic/image-20250122134722380.png)
+这道题意思是一个人可以有几次婚姻关系
+
+![image-20250122134734394](./pic/image-20250122134734394.png)
+
+D：重点是联系的基数的判定，即一个实体能够和另外实体的多少个实例发生联系。
+
+![image-20250122134750648](./pic/image-20250122134750648.png)
+
+A没有进行抽象，B没有标明关系，D节点1和节点2实际上是一个实体。
+
+![image-20250122134800322](./pic/image-20250122134800322.png)
+
+学生按班级选课是一个功能，是学生的一个属性。
+
+![image-20250122134842391](./pic/image-20250122134842391.png)
+
+老板不能用类似的重叠量词形容，给一个浴池开发系统也不能直接写上浴池。
+
+![image-20250122134849680](./pic/image-20250122134849680.png)
+
+相比元模型，模型是由一组具体概念及其之间关系构成的。
+
+## 工程化方法及案例分析
+
+### IDEF1X
+
+![image-20250122135820473](./pic/image-20250122135820473.png)
+
+**实体**表示一个现实和抽象事物的集合，这些事物必须具有相同的属性和特征。
+
+![image-20250122140102188](./pic/image-20250122140102188.png)
+
+**独立实体**：一个实体的实例都被唯一的标识而不决定于它与其他实体的联系。
+
+![image-20250122140328687](./pic/image-20250122140328687.png)
+
+**从属实体**：一个实体的唯一标识需要依赖于该实体与其他实体的联系。从属实体继承了其他实体里边的属性。
+
+![image-20250122140724785](./pic/image-20250122140724785.png)
+
+独立实体与从属实体的图示规则：
+
+![image-20250122140806339](./pic/image-20250122140806339.png)
+
+![image-20250122141004383](./pic/image-20250122141004383.png)
+
+  注意外来关键字也可以重新命名。
+
+![image-20250122141127383](./pic/image-20250122141127383.png)
+
+注意：
+
+* 存在一个联系，只能有一个外来关键字
+* 被继承属性只能是主关键字所包含的属性
+
+![image-20250122141239617](./pic/image-20250122141239617.png)
+
+**联系(Relationship)**：是实体之间的一种连接关系
+
+标定联系：子实体的实例都是由它与父实体的联系而确定。父实体的关键字是子实体的一部分。
+
+![image-20250122141938777](./pic/image-20250122141938777.png)
+
+非标定联系：父实体的主关键字不是子实体的主关键字。
+
+![image-20250122142011610](./pic/image-20250122142011610.png)
+
+圆圈指向多端，指向子实体。
+
+![image-20250122142148487](./pic/image-20250122142148487.png)
+
+父实体的一个实例可以与子实体的0个、1个或多个实例相联系。
+
+![image-20250122142309370](./pic/image-20250122142309370.png)
+
+非确定联系：实体之间的多对多的联系。引入**相交实体/相关实体**。
+
+![image-20250122142527398](./pic/image-20250122142527398.png)
+
+分类联系：一个一般实体实例及多个分类实体实例构成的。
+
+![image-20250122143048167](./pic/image-20250122143048167.png)
+
+![image-20250122144654523](./pic/image-20250122144654523.png)
+
+具体化(Specialization)
+
+![image-20250122144751800](./pic/image-20250122144751800.png)
+
+泛华(Generalization)
+
+![image-20250122144851660](./pic/image-20250122144851660.png)
+
+![image-20250122144938194](./pic/image-20250122144938194.png)
+
+![image-20250122145044291](./pic/image-20250122145044291.png)
+
+完全分类联系和非完全分类联系
+
+![image-20250122145419204](./pic/image-20250122145419204.png)
+
+分类实体必须有特有的属性，否则分类没有意义
+
+![image-20250122145526138](./pic/image-20250122145526138.png)
+
+ ![image-20250122145738565](./pic/image-20250122145738565.png)
+
+作用/角色：
+
+![image-20250122145937763](./pic/image-20250122145937763.png)
+
+![image-20250122150310237](./pic/image-20250122150310237.png)
+
+![image-20250122151655723](./pic/image-20250122151655723.png)
+
+C选项无法处理一本图书被同一个人借阅多次的情景（因为主键重复了）
+
+![image-20250122151739020](./pic/image-20250122151739020.png)
+
+这道题我还是没弄懂，要是同一个客户定了同一个订单，那就主键重复了。
+
+# 数据库设计过程
+
+**数据库设计的四个过程**
+
+![image-20250122153416759](./pic/image-20250122153416759.png)
+
+### 需求分析
+
+![image-20250122153907166](./pic/image-20250122153907166.png)
+
+### 概念数据库设计
+
+![image-20250122161605128](./pic/image-20250122161605128.png)
+
+![image-20250122161619101](./pic/image-20250122161619101.png)
+
+![image-20250122161633099](./pic/image-20250122161633099.png)
+
+概念数据库可能冲突：
+
+![image-20250122161740797](./pic/image-20250122161740797.png)
+
+![image-20250122161759096](./pic/image-20250122161759096.png)
+
+![image-20250122162041332](./pic/image-20250122162041332.png)
+
+### 逻辑数据库设计
+
+E-R图与关系模式的转换
+
+![image-20250122162427911](./pic/image-20250122162427911.png)
+
+![image-20250122162608987](./pic/image-20250122162608987.png)
+
+![image-20250122162746942](./pic/image-20250122162746942.png)
+
+![image-20250122162831377](./pic/image-20250122162831377.png)
+
+![image-20250122163048932](./pic/image-20250122163048932.png)
+
+![image-20250122163138856](./pic/image-20250122163138856.png)
+
+![image-20250122163235165](./pic/image-20250122163235165.png)
+
+![image-20250122163325681](./pic/image-20250122163325681.png)
+
+![image-20250122163505071](./pic/image-20250122163505071.png) 
+
+![image-20250122164031630](./pic/image-20250122164031630.png)
+
+![image-20250122164223662](./pic/image-20250122164223662.png)
+
+![image-20250122164551868](./pic/image-20250122164551868.png)
+
+IDEF1X图与关系模式的转换
+
+![image-20250122164807605](./pic/image-20250122164807605.png)
+
+不正确设计的数据库引发的问题：
+
+![image-20250122165020738](./pic/image-20250122165020738.png)
+
+![image-20250122165207478](./pic/image-20250122165207478.png)
+
+![image-20250122165241397](./pic/image-20250122165241397.png)
 
