--- a/数据库.md
+++ b/数据库.md
@@ -1423,3 +1423,31 @@ D还有个交换生
 
 ## 函数依赖及其公理定理
 
+### 函数依赖
+
+![image-20250123123101105](./pic/image-20250123123101105.png)
+
+上图中，一个学号决定了唯一的姓名和年龄，然而姓名和年龄相同的两人不是一个学号。
+
+![image-20250123123345391](./pic/image-20250123123345391.png)
+
+上图中，第二个表中A决定C意思是每一个a1,a2,a3都有唯一对应的c#
+
+![image-20250123124749476](./pic/image-20250123124749476.png)
+
+![image-20250123124901364](./pic/image-20250123124901364.png)
+
+ ![image-20250123125216582](./pic/image-20250123125216582.png)
+
+上图中，第二个箭头上面的p是部分函数依赖，因为一个学号就可以唯一标识一个姓名了。
+
+![image-20250123125700590](./pic/image-20250123125700590.png)
+
+![image-20250123125904590](./pic/image-20250123125904590.png)
+
+### 函数依赖的概念
+
+候选键：Definition
+
+![image-20250123130508938](./pic/image-20250123130508938.png)
+
