--- a/数据库.md
+++ b/数据库.md
@@ -1431,7 +1431,11 @@ D还有个交换生
 
 ![image-20250123123345391](./pic/image-20250123123345391.png)
 
-上图中，第二个表中A决定C意思是每一个a1,a2,a3都有唯一对应的c#
+上图中，第二个表中A决定C意思是每一个a1,a2,a3都有唯一对应的c
+
+值相同时所决定的元素是否相同
+
+ 
 
 ![image-20250123124749476](./pic/image-20250123124749476.png)
 
@@ -1447,7 +1451,123 @@ D还有个交换生
 
 ### 函数依赖的概念
 
-候选键：Definition
+候选键：Candidate Key
+
+注意候选键可以是组合，主属性从候选键中挑
 
 ![image-20250123130508938](./pic/image-20250123130508938.png)
+
+![image-20250216104017396](./pic/image-20250216104017396.png)
+
+外来键：Foreign Key
+
+![image-20250216104719377](./pic/image-20250216104719377.png)
+
+逻辑蕴含
+
+![image-20250216104827799](./pic/image-20250216104827799.png)
+
+闭包：Closure 
+
+![image-20250216105059756](./pic/image-20250216105059756.png)
+
+上图示例中，F有两个函数依赖，可以蕴含多个函数依赖
+
+### 关于函数依赖的公理和定理
+
+Armstrong's Axioms 公理
+
+![image-20250216121944266](./pic/image-20250216121944266.png)
+
+![image-20250216122400992](./pic/image-20250216122400992.png)
+
+属性（集）闭包：看不懂
+
+![image-20250216122839460](./pic/image-20250216122839460.png)
+
+覆盖：Cover
+
+![image-20250216123139474](./pic/image-20250216123139474.png)
+
+![image-20250216123430213](./pic/image-20250216123430213.png)
+
+最小覆盖：minimal Cover 看不懂思密达
+
+![image-20250216123734878](./pic/image-20250216123734878.png)
+
+![image-20250216125828726](./pic/image-20250216125828726.png)
+
+![image-20250216125903505](./pic/image-20250216125903505.png)
+
+![image-20250216125934295](./pic/image-20250216125934295.png)
+
+![image-20250216130108284](./pic/image-20250216130108284.png)
+
+![image-20250216130127476](./pic/image-20250216130127476.png)
+
+看不懂
+
+![image-20250216130135635](./pic/image-20250216130135635.png)
+
+## 关系模式设计值规范形式
+
+1NF：关系中不能有复合属性、多值属性及其组合
+
+![image-20250216135257391](./pic/image-20250216135257391.png)
+
+ 2NF：U中每一非主属性完全函数依赖于候选键。
+
+![image-20250216135930331](./pic/image-20250216135930331.png)
+
+![image-20250216140546632](./pic/image-20250216140546632.png)
+
+3NF：在2NF的基础上，没有传递依赖
+
+![image-20250216141253058](./pic/image-20250216141253058.png)
+
+BCNF：没太看懂，是候选键映射的属性必须能反过来映射候选键吗？
+
+满足BCNF的必要条件是满足3NF
+
+![image-20250216141648300](./pic/image-20250216141648300.png)
+
+![image-20250216142348107](./pic/image-20250216142348107.png)
+
+### 多值依赖与关系的第4NF
+
+ 题库没有，不学了
+
+![image-20250216143425749](./pic/image-20250216143425749.png)
+
+
+
+![image-20250216153426529](./pic/image-20250216153426529.png)
+
+![image-20250216153610769](./pic/image-20250216153610769.png)
+
+![image-20250216153437886](./pic/image-20250216153437886.png)
+
+![image-20250216153715550](./pic/image-20250216153715550.png)
+
+![image-20250216153446435](./pic/image-20250216153446435.png)
+
+C：存在部分函数依赖Sid和Cid->Cid
+
+![image-20250216153454482](./pic/image-20250216153454482.png)
+
+B：Y对X部分依赖
+
+D：存在部分依赖不属于2NF
+
+## 模式分解存在什么问题
+
+![image-20250216155853462](./pic/image-20250216155853462.png)
+
+  ![image-20250217154501459](./pic/image-20250217154501459.png)
+
+![image-20250216162708541](./pic/image-20250216162708541.png)
+
+这节先保留 看不懂
+
+# 数据库物理存储
 
