--- a/集合论与图论.md
+++ b/集合论与图论.md
@@ -150,7 +150,7 @@
 
 f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
-单射：每一个y仅对应一个x
+单射：每一个y最多对应一个x
 
 满射：所有y都有x对应
 ![image-20250323152309535](./pic/image-20250323152309535.png)
@@ -221,6 +221,20 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250323165340849](./pic/image-20250323165340849.png)
 
+![image-20250323203754572](./pic/image-20250323203754572.png)
+
+![image-20250323203801095](./pic/image-20250323203801095.png)
+
+![image-20250323204719627](./pic/image-20250323204719627.png)
+
+![image-20250323204726620](./pic/image-20250323204726620.png)
+
+![image-20250323210820836](./pic/image-20250323210820836.png)
+
+![image-20250323210835449](./pic/image-20250323210835449.png)
+
+![image-20250323210847962](./pic/image-20250323210847962.png)
+
 
 
 ## 2.4 映射的合成
@@ -241,6 +255,14 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 
 ![image-20250303210141227](./pic/image-20250303210141227.png)
 
+![image-20250323221831598](./pic/image-20250323221831598.png)
+
+![image-20250323221840611](./pic/image-20250323221840611.png)
+
+![image-20250323221849278](./pic/image-20250323221849278.png)
+
+ 
+
 ## 2.5 逆映射
 
 ![image-20250303210501151](./pic/image-20250303210501151.png)
@@ -260,6 +282,12 @@ f:对X中**每个**元素x**都有**Y中唯一确定的元素y与之对应。
 ![image-20250304154428604](./pic/image-20250304154428604.png)
 
 ![image-20250304154729790](./pic/image-20250304154729790.png)
+
+![image-20250324001455419](./pic/image-20250324001455419.png)
+
+![image-20250324001513641](./pic/image-20250324001513641.png)
+
+
 
 ## 2.6 置换
 
